--- a/nginx.conf
+++ b/nginx.conf
@@ -1,19 +1,19 @@
 server {
     listen 80;
-    server_name website.local www.website.local;
-    return 301 https://website.local$request_uri;
+    server_name website.dindz www.website.dindz;
+    return 301 https://website.dindz$request_uri;
 }
 
 server {
     listen 443 ssl http2;   
-    server_name website.local www.website.local;
+    server_name website.dindz www.website.dindz;
     root /websites/default/public;
     index index.php index.html index.htm;
     
-    ssl_certificate /certs/website.local/fullchain.pem;
-    ssl_certificate_key /certs/website.local/privkey.pem;    
+    ssl_certificate /certs/website.dindz/fullchain.pem;
+    ssl_certificate_key /certs/website.dindz/privkey.pem;    
     ssl_session_cache shared:SSL:10m;
-    ssl_trusted_certificate /certs/website.local/chain.pem;
+    ssl_trusted_certificate /certs/website.dindz/chain.pem;
     ssl_stapling on;
     ssl_stapling_verify on;
     resolver 1.1.1.1;
@@ -49,20 +49,20 @@ server {
 
 server {
     listen 80;
-    server_name ~^(?<subdomain>.*)\.website\.local$;
-    return 301 https://$subdomain.website.local$request_uri;
+    server_name ~^(?<subdomain>.*)\.website\.dindz$;
+    return 301 https://$subdomain.website.dindz$request_uri;
 }
 
 server {
     listen 443 ssl http2;
-    server_name ~^(?<subdomain>.+)\.website\.local$;
+    server_name ~^(?<subdomain>.+)\.website\.dindz$;
     root /websites/$subdomain/public;
     index index.php index.html index.htm;
     
-    ssl_certificate /certs/website.local-0001/fullchain.pem;
-    ssl_certificate_key /certs/website.local-0001/privkey.pem;   
+    ssl_certificate /certs/website.dindz-0001/fullchain.pem;
+    ssl_certificate_key /certs/website.dindz-0001/privkey.pem;   
     ssl_session_cache shared:SSL:10m;
-    ssl_trusted_certificate /certs/website.local-0001/chain.pem;
+    ssl_trusted_certificate /certs/website.dindz-0001/chain.pem;
     ssl_stapling on;
     ssl_stapling_verify on;
     resolver 1.1.1.1;
@@ -101,20 +101,20 @@ server {
 
 server {
     listen 80;
-    server_name web.local www.web.local;
-    return 301 https://web.local$request_uri;
+    server_name web.dindz www.web.dindz;
+    return 301 https://web.dindz$request_uri;
 }
 
 server {
     listen 443 ssl http2;   
-    server_name web.local www.web.local;
+    server_name web.dindz www.web.dindz;
     root /websites/default/public;
     index index.php index.html index.htm;
     
-    ssl_certificate /certs/web.local/fullchain.pem;
-    ssl_certificate_key /certs/web.local/privkey.pem;    
+    ssl_certificate /certs/web.dindz/fullchain.pem;
+    ssl_certificate_key /certs/web.dindz/privkey.pem;    
     ssl_session_cache shared:SSL:10m;
-    ssl_trusted_certificate /certs/web.local/chain.pem;
+    ssl_trusted_certificate /certs/web.dindz/chain.pem;
     ssl_stapling on;
     ssl_stapling_verify on;
     resolver 1.1.1.1;
@@ -151,14 +151,14 @@ server {
 
 server {
     listen 443 ssl http2;
-    server_name mail.web.local;
+    server_name mail.web.dindz;
     root /websites/default/public;
     index index.php index.html index.htm;
 
-    ssl_certificate /certs/web.local-0001/fullchain.pem;
-    ssl_certificate_key /certs/web.local-0001/privkey.pem;
+    ssl_certificate /certs/web.dindz-0001/fullchain.pem;
+    ssl_certificate_key /certs/web.dindz-0001/privkey.pem;
     ssl_session_cache shared:SSL:10m;
-    ssl_trusted_certificate /certs/web.local-0001/chain.pem;
+    ssl_trusted_certificate /certs/web.dindz-0001/chain.pem;
     ssl_stapling on;
     ssl_stapling_verify on;
     resolver 1.1.1.1;
@@ -182,20 +182,20 @@ server {
 
 server {
     listen 80;
-    server_name ~^(?<subdomain>.*)\.web\.local$;
-    return 301 https://$subdomain.web.local$request_uri;
+    server_name ~^(?<subdomain>.*)\.web\.dindz$;
+    return 301 https://$subdomain.web.dindz$request_uri;
 }
 
 server {
     listen 443 ssl http2;
-    server_name ~^(?<subdomain>.+)\.web\.local$;
+    server_name ~^(?<subdomain>.+)\.web\.dindz$;
     root /websites/$subdomain/public;
     index index.php index.html index.htm;
     
-    ssl_certificate /certs/web.local-0001/fullchain.pem;
-    ssl_certificate_key /certs/web.local-0001/privkey.pem;   
+    ssl_certificate /certs/web.dindz-0001/fullchain.pem;
+    ssl_certificate_key /certs/web.dindz-0001/privkey.pem;   
     ssl_session_cache shared:SSL:10m;
-    ssl_trusted_certificate /certs/web.local-0001/chain.pem;
+    ssl_trusted_certificate /certs/web.dindz-0001/chain.pem;
     ssl_stapling on;
     ssl_stapling_verify on;
     resolver 1.1.1.1;
